add database url

--- a/.env
+++ b/.env
@@ -17,4 +17,4 @@ DATABASE_PASSWORD="#kal4648"
 DATABASE_HOST=localhost
 DATABASE_PORT=5432
 
-
+DATABASE_URL=postgresql://ybs_db_esbx_user:vlhuzMtJ8SchOKnJreissbP3SEJZBZfu@dpg-d08evqngi27c738hga80-a/ybs_db_esbx
