--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@ EMAIL_HOST_PASSWORD="tttw qzwa uabf scqg"
 
 
 SECRET_KEY=sq&2ueaii2959_k$5+@nu2w6e3d@wir0t8shevxez&&co#w)05
-DEBUG=True
+DEBUG=False
 
-ALLOWED_HOSTS=localhost,82.29.174.91,127.0.0.1
+ALLOWED_HOSTS=localhost,82.29.174.91,127.0.0.1,ybs-ecommerce.onrender.com
 
 DATABASE_NAME=ybs_db
 DATABASE_USER=ybs_user
