change the debug value

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ EMAIL_HOST_PASSWORD="tttw qzwa uabf scqg"
 
 
 SECRET_KEY=sq&2ueaii2959_k$5+@nu2w6e3d@wir0t8shevxez&&co#w)05
-DEBUG=False
+DEBUG=True
 
 ALLOWED_HOSTS=localhost,82.29.174.91,127.0.0.1,ybs-ecommerce.onrender.com
 
