--- a/.env
+++ b/.env
@@ -4,11 +4,14 @@ EXCHANGE_RATE_API_KEY=f591d3c3f289c685b3f34640
 EMAIL_HOST_USER=cakek433@gmail.com
 EMAIL_HOST_PASSWORD="tttw qzwa uabf scqg"
 
+# ACCOUNT_EMAIL_VERIFICATION = "mandatory"
+# ACCOUNT_AUTHENTICATED_REMEMBER = True
 
 SECRET_KEY=sq&2ueaii2959_k$5+@nu2w6e3d@wir0t8shevxez&&co#w)05
 DEBUG=True
 
 ALLOWED_HOSTS=localhost,82.29.174.91,127.0.0.1,ybs-ecommerce.onrender.com
+SITE_ID=4
 
 DATABASE_NAME=ybs_db
 DATABASE_USER=ybs_user
