--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ EMAIL_HOST_PASSWORD="tttw qzwa uabf scqg"
 # ACCOUNT_AUTHENTICATED_REMEMBER = True
 
 SECRET_KEY=sq&2ueaii2959_k$5+@nu2w6e3d@wir0t8shevxez&&co#w)05
-DEBUG=True
+DEBUG=False
 
 ALLOWED_HOSTS=localhost,82.29.174.91,127.0.0.1,ybs-ecommerce.onrender.com
 SITE_ID=4
